// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`карточка WebFetch: настоящий хост первой строкой, часть до @ — предупреждением (ревью GP1) > WebFetch 1`] = `
<section
  aria-label="Ассистент хочет выполнить: открыть адрес"
  class="chat-card chat-card--open"
  role="group"
>
  <div
    class="chat-card__title"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shield-question-mark lucide-shield-question chat-card__icon"
      fill="none"
      focusable="false"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.75"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
      />
      <path
        d="M9.1 9a3 3 0 0 1 5.82 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      Ассистент хочет выполнить: 
      <b>
        открыть адрес
      </b>
      <span
        class="chat-card__size"
      >
         · 
        5 строк, 135 симв.
      </span>
    </span>
  </div>
  <div
    class="chat-card__warn"
    role="note"
  >
    ⚠ в адресе есть часть до @ — запрос уйдёт на evil.com
  </div>
  <pre
    class="chat-card__args"
    dir="ltr"
  >
    хост: evil.com
⚠ в адресе есть часть до @ — запрос уйдёт на evil.com
адрес: https://good.com@evil.com/x
что найти:
│ x) (хост: good.com
  </pre>
  <div
    class="chat-card__actions"
  >
    <button
      class="btn btn--mono btn--sm chat-card__allow"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Разрешить один раз
      </span>
    </button>
    <button
      class="btn btn--outline btn--sm chat-card__deny"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Отклонить
      </span>
    </button>
  </div>
</section>
`;

exports[`карточка записи: начало и конец с пометкой, «Показать полностью» — всё содержимое > Write, полностью 1`] = `
<section
  aria-label="Ассистент хочет выполнить: запись в файл"
  class="chat-card chat-card--open"
  role="group"
>
  <div
    class="chat-card__title"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shield-question-mark lucide-shield-question chat-card__icon"
      fill="none"
      focusable="false"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.75"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
      />
      <path
        d="M9.1 9a3 3 0 0 1 5.82 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      Ассистент хочет выполнить: 
      <b>
        запись в файл
      </b>
      <span
        class="chat-card__size"
      >
         · 
        17 строк, 263 симв.
      </span>
    </span>
  </div>
  <pre
    class="chat-card__args"
    dir="ltr"
  >
    Записать файл: C:\\Users\\demo\\Встречи\\2026-10-07_11-00\\код мерчанта.txt
│ # Код мерчанта
│ строка 1
│ строка 2
│ строка 3
│ строка 4
│ строка 5
│ строка 6
│ строка 7
│ строка 8
│ строка 9
│ строка 10
│ строка 11
│ строка 12
│ строка 13
│ строка 14
│ КРЫЖОВНИК-7741
  </pre>
  <button
    aria-expanded="true"
    class="btn btn--link chat-card__more"
    tabindex="0"
    type="button"
  >
    <span
      class="btn__label"
    >
      Свернуть
    </span>
  </button>
  <div
    class="chat-card__actions"
  >
    <button
      class="btn btn--mono btn--sm chat-card__allow"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Разрешить один раз
      </span>
    </button>
    <button
      aria-description="Дальше до конца встречи без вопросов: изменение файлов в C:\\Users\\demo\\Встречи\\2026-10-07_11-00"
      class="btn btn--ghost btn--sm chat-card__allow-meeting"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Разрешать такое до конца встречи
      </span>
    </button>
    <button
      class="btn btn--outline btn--sm chat-card__deny"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Отклонить
      </span>
    </button>
  </div>
</section>
`;

exports[`карточки по инструменту: запись, правка, MCP — снимки (grant-polish) > Edit 1`] = `
<section
  aria-label="Ассистент хочет выполнить: правку файла"
  class="chat-card chat-card--open"
  role="group"
>
  <div
    class="chat-card__title"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shield-question-mark lucide-shield-question chat-card__icon"
      fill="none"
      focusable="false"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.75"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
      />
      <path
        d="M9.1 9a3 3 0 0 1 5.82 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      Ассистент хочет выполнить: 
      <b>
        правку файла
      </b>
      <span
        class="chat-card__size"
      >
         · 
        5 строк, 159 симв.
      </span>
    </span>
  </div>
  <pre
    class="chat-card__args"
    dir="ltr"
  >
    Изменить файл: C:\\Users\\demo\\Встречи\\2026-10-07_11-00\\код мерчанта.txt
Заменить ВСЕ вхождения (replace_all: true)
− КРЫЖОВНИК-7741
+ КРЫЖОВНИК-7741
+ проверено
  </pre>
  <div
    class="chat-card__actions"
  >
    <button
      class="btn btn--mono btn--sm chat-card__allow"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Разрешить один раз
      </span>
    </button>
    <button
      class="btn btn--outline btn--sm chat-card__deny"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Отклонить
      </span>
    </button>
  </div>
</section>
`;

exports[`карточки по инструменту: запись, правка, MCP — снимки (grant-polish) > MCP 1`] = `
<section
  aria-label="Ассистент хочет выполнить: MCP team-jira → jira_create_issue"
  class="chat-card chat-card--open"
  role="group"
>
  <div
    class="chat-card__title"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shield-question-mark lucide-shield-question chat-card__icon"
      fill="none"
      focusable="false"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.75"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
      />
      <path
        d="M9.1 9a3 3 0 0 1 5.82 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      Ассистент хочет выполнить: 
      <b>
        MCP team-jira → jira_create_issue
      </b>
      <span
        class="chat-card__size"
      >
         · 
        6 строк, 125 симв.
      </span>
    </span>
  </div>
  <pre
    class="chat-card__args"
    dir="ltr"
  >
    {
  "project": "ABC",
  "summary": "Запуск 28.11",
  "attachment": "C:\\Users\\demo\\spec.md",
  "labels": ["release", "risk"]
}
  </pre>
  <div
    class="chat-card__actions"
  >
    <button
      class="btn btn--mono btn--sm chat-card__allow"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Разрешить один раз
      </span>
    </button>
    <button
      class="btn btn--outline btn--sm chat-card__deny"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Отклонить
      </span>
    </button>
  </div>
</section>
`;

exports[`карточки по инструменту: запись, правка, MCP — снимки (grant-polish) > Write 1`] = `
<section
  aria-label="Ассистент хочет выполнить: запись в файл"
  class="chat-card chat-card--open"
  role="group"
>
  <div
    class="chat-card__title"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shield-question-mark lucide-shield-question chat-card__icon"
      fill="none"
      focusable="false"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.75"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
      />
      <path
        d="M9.1 9a3 3 0 0 1 5.82 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      Ассистент хочет выполнить: 
      <b>
        запись в файл
      </b>
      <span
        class="chat-card__size"
      >
         · 
        17 строк, 263 симв.
      </span>
    </span>
  </div>
  <pre
    class="chat-card__args"
    dir="ltr"
  >
    Записать файл: C:\\Users\\demo\\Встречи\\2026-10-07_11-00\\код мерчанта.txt
│ # Код мерчанта
│ строка 1
│ строка 2
│ строка 3
│ строка 4
…⟨скрыто: 7 строк, 80 симв.⟩…
│ строка 12
│ строка 13
│ строка 14
│ КРЫЖОВНИК-7741
  </pre>
  <button
    aria-expanded="false"
    class="btn btn--link chat-card__more"
    tabindex="0"
    type="button"
  >
    <span
      class="btn__label"
    >
      Показать полностью
    </span>
  </button>
  <div
    class="chat-card__actions"
  >
    <button
      class="btn btn--mono btn--sm chat-card__allow"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Разрешить один раз
      </span>
    </button>
    <button
      aria-description="Дальше до конца встречи без вопросов: изменение файлов в C:\\Users\\demo\\Встречи\\2026-10-07_11-00"
      class="btn btn--ghost btn--sm chat-card__allow-meeting"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Разрешать такое до конца встречи
      </span>
    </button>
    <button
      class="btn btn--outline btn--sm chat-card__deny"
      tabindex="0"
      type="button"
    >
      <span
        class="btn__label"
      >
        Отклонить
      </span>
    </button>
  </div>
</section>
`;
